# GenshinManagementTool

./: .gitignore  README.md  app.py  db.sqlite  pyproject.toml  settings.py
cruds/: chara.py  db.py  item.py  migrate.py  weapon.py
csv_datas/: chara.csv  item.csv  weapon.csv
data_loader/: read_csv.py
func/: calc_item.py  chara.py  create_selection.py  file.py  item.py  skill_up.py  weapon.py
models/: __init__.py  base.py  chara.py  item.py  weapon.py  weapon_master.py
save_files/: chara.csv  item.csv  up_chara.csv  up_item.csv  up_weapon.csv  weapon.csv
