[tool.poetry]
name = "genshinmanagementtool"
version = "0.1.0"
description = ""
authors = ["Sylphy0052 <yark0531@yahoo.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gradio = "^4.19.2"
sqlalchemy = "^2.0.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
